--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -989,7 +989,7 @@
                     <li>
                         <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
                     </li>
-                    <li><a style="cursor:default"><img src="~/Content/images/clients/star-pravah.png" alt="Star Pravah" /></a></li>
+                    <li><a href="@Url.Action("star-pravah-ar","work")"><img src="~/Content/images/clients/star-pravah.png" alt="Star Pravah" /></a></li>
 
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/evion-logo.png" alt="Evion" /></a>
@@ -1356,6 +1356,15 @@
                                     </a>
                                 </li>
 
+                                <li>
+                                    <a href="@Url.Action("edufront","work")">
+                                        <img src="~/Content/work/images/thums/edufront-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Edufront</h4>
+                                            <p>Connect Learning, Teaching & The Administration</p>
+                                        </div>
+                                    </a>
+                                </li>
 
                             </ul>
                         </div>
@@ -2248,6 +2257,19 @@
                                             <span class="tap-area"></span> <img src="~/Content/images/iphone.png" alt="">
                                         </div>
                                         <a href="https://www.facebook.com/fbcameraeffects/tryit/292231151454606/" target="_blank" class="btn">Try This Filter</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mobile-video-block">
+                                        <div class="mobile-video">
+                                            <figure class="video-figure">
+                                                <video preload="metadata" poster="~/Content/media/saridon.jpg" muted autoplay loop playsinline webkit-playsinline>
+                                                    <source src="~/Content/media/saridon.mp4" type="video/mp4">
+                                                </video>
+                                            </figure>
+                                            <span class="tap-area"></span> <img src="~/Content/images/iphone.png" alt="">
+                                        </div>
+                                        <a href="https://www.facebook.com/fbcameraeffects/tryit/131239355647201/" target="_blank" class="btn">Try This Filter</a>
                                     </div>
                                 </li>
                             </ul>
