--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -157,6 +157,7 @@
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("cameo","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/cameo-thum.jpg" alt="" /> <span>Cameo</span> </a> </li>
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("star-pravah-ar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/star-pravah-thum.jpg" alt="" /> <span>Star Pravah</span> </a> </li>
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("philips","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/philips-thum.jpg" alt="" /> <span>Philips</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("edufront","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/edufront-thum.jpg" alt="" /> <span>Edufront</span> </a> </li>
 
     </ul>
 
