Added Livogen and Livogen break free work pages

--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1355,8 +1355,26 @@
                                         </div>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="@Url.Action("livogen","work")">
+                                        <img src="~/Content/work/images/thums/livogen-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Livogen</h4>
+                                            <p>Raho Strong, Iron Strong</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("livogen-break-free","work")">
+                                        <img src="~/Content/work/images/thums/livogen-break-free-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Livogen</h4>
+                                            <p>Break Free From Iron Deficiency</p>
+                                        </div>
+                                    </a>
+                                </li>
 
-                                
+
 
                             </ul>
                         </div>
@@ -2154,6 +2172,14 @@
                 <div class="xms-container">
                     <div class="data-content active" data-my-element="FacebookAR">
                         <div class="work-wrapp ">
+
+                            <div class="spark_ar_profile">
+                                <div class="spark_ar_logo"> <video preload="metadata" poster="~/Content/media/spark.png" src="~/Content/media/spark.mp4" autoplay playsinline webkit-playsinline loop muted></video></div>
+                                <div class="spark_ar_cta ">
+                                    <a href="https://www.facebook.com/sparkarhub/portfolios/fb/sparktindia/" target="_blank" class="btn">Portfolio</a>
+                                </div>
+                            </div>
+
                             <ul class="mobile-video-gallery">
                                 <li>
                                     <div class="mobile-video-block">
