--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -17,6 +17,8 @@
         <ul id="pandg" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("seven-seas","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/seven-seas.jpg" alt="" /> <span>Seven Seas</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("seven-seas-ar","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/seven-seas-ar.jpg" alt="" /> <span>Seven Seas Ar</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("livogen","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/livogen-thum.jpg" alt="" /> <span>Livogen</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("livogen-break-free","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/livogen-break-free-thum.jpg" alt="" /> <span>Livogen</span> </a> </li>
         </ul>
 
 
