--- a/Sparkt.WebApp/Content/work/css/style.css
+++ b/Sparkt.WebApp/Content/work/css/style.css
@@ -335,6 +335,10 @@ m .bottom-padding-none {
         overflow: hidden;
     }
 
+.video-item > img {
+    width: 100%;
+}
+
 @media screen and (min-width:1200px) {
     .banner-source {
         width: 100%;
@@ -3981,6 +3985,14 @@ span.push-elem {
         left: 105%;
         z-index: 2;
         width: 19%;
+    }
+
+    .sparkt-carousel .youtube-elem.elem-3 {
+        top: inherit;
+        left: 105%;
+        z-index: 2;
+        width: 10%;
+        bottom: 0;
     }
 
 .sparkt-carousel .hotstar-elem {
